tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_04_egress_matchLabels_toPorts_toHttps_multiple_urls.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  egress:
  - toEndpoints:
    - matchLabels:
        container: ubuntu-5
        group: group-2
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /test1
        - method: GET
          path: /test2
---
