tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_09_egress_toEntities_host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-yzrywjjpjzpfrfe
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-1
      group: group-1
  egress:
  - toEntities:
    - host
---
