tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_20_egress_before_db_status_check_dns_ip_mapping.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  egress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
    toCIDR:
    - 143.248.36.38/32
---
