tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_27_ingress_targetRule_matchLabels_toPorts.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      group: group-2
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-1
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
---
