tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_29_ingress_before_db_status_check_target_rule_merging.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-4
        group: group-2
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
---
