tests/multi-ubuntu/prepared-flows/automation-tests/policyfiles/TC_35_ingress_egress_toEntities_fromEntities_remote_node.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-whthctcuaxhxkqf
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  egress:
  - toEntities:
    - unknown
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-dafplsjfbcxoeff
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-3
      group: group-1
  ingress:
  - fromEntities:
    - unknown
---
